# vehicle_telemetry

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: events.example.csv
notebooks/: FA20DIT_Engine_Health_Analysis.ipynb  drive_health_v1.ipynb  telemetry_report.ipynb
reports/: vacuum_leak_case_study.md
scripts/: run_telemetry_report.py
src/vehicle_telemetry/: __init__.py  features.py  io.py  longitudinal.py  normalize.py  plots.py  report.py
