[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-telemetry"
version = "0.1.0"
description = "Vehicle telemetry normalization and longitudinal engine health reporting for Subaru FA20DIT logs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "nbformat>=5.10",
  "nbclient>=0.10",
  "ipykernel>=6.29",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
